eglibc (2.13-14) UNRELEASED; urgency=low

  [ Aurelien Jarno ]
  * Remove amd64 biarch includes from libc6-dev:i386.  Closes: #636115,
    #636116.

  [ Samuel Thibault ]
  * patches/hurd-i386/submitted-sysvshm.diff: Fix shm creation: do not create
    file on first lookup.

 -- Samuel Thibault <sthibault@debian.org>  Mon, 01 Aug 2011 22:36:14 +0200

eglibc (2.13-13) unstable; urgency=low

  * sysdeps/*.mk: install the biarch includes in /usr/include instead
    of the multiarch path. Fix FTBFS on some architectures.
  * sysdeps/mips.*mk: fix triarch includes on mips and mipsel.

 -- Aurelien Jarno <aurel32@debian.org>  Sun, 31 Jul 2011 02:42:58 +0200

eglibc (2.13-12) unstable; urgency=low

  [ Aurelien Jarno ]
  * rules.d/debhelper.mk: Fix a typo about kfreebsd-amd64.
  * Change include directory on i386 from i486-linux-gnu to i386-linux-gnu
    and on kfreebsd-i386 from i486-kfreebsd-gnu to i386-kfreebsd-gnu.
  * Fix installation of biarch headers (Closes: #635685):
    - Use a symlink for bits/ and gnu/ directories
    - Use symlinked files for sys/ directory
    - Add a preinst script to do the directory <-> symlink conversion.

 -- Aurelien Jarno <aurel32@debian.org>  Sat, 30 Jul 2011 13:33:39 +0200

eglibc (2.13-11) unstable; urgency=low

  [ Aurelien Jarno ]
  * control.in/main: fix nscd description.  Closes: #633370.
  * Update patches/svn-updates to revision 14511 to fix build on 
    powerpcspe. Add corresponding symbols file and expected testsuite 
    results.  Closes: #632863.
  * Add patches/localedata/locale-os_RU.diff from upstream to add Ossetian
    locale.  Closes: #634508.
  * kfreebsd/local-sysdeps.diff, update to revision 3618 (from glibc-bsd).
    - fixes LD_PRELOAD with a kfreebsd-9 kernel. Closes: #630695.
    - fixes tst-atime when build in a noatime filesystem.  Closes: #634152.
    - uses upstream RFTSIGZMB for exit signal selection when available.
  * Disable multiarch support on amd64, kfreebsd-amd64, ppc64, sparc64 until