@@ -3,6 +3,8 @@ eglibc (2.13-14) UNRELEASED; urgency=low
   [ Aurelien Jarno ]
   * Remove amd64 biarch includes from libc6-dev:i386.  Closes: #636115,
     #636116.
+  * Fix the biarch symlinks on mipsel, pointing them to the right multiarch
+    directory.
 
   [ Samuel Thibault ]
   * patches/hurd-i386/submitted-sysvshm.diff: Fix shm creation: do not create
